[server][canvases] Fixed css so that board will not stretch if player name is too long.

--- a/CodingDojo/server/src/main/webapp/resources/css/dojo.css
+++ b/CodingDojo/server/src/main/webapp/resources/css/dojo.css
@@ -290,7 +290,6 @@ span.pow {
 
 canvas {
     border: 1px solid;
-    width:100%!important;
 }
 
 /* rule page */
